discussion/kv_engine/126024/126024_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38673: Privilege based visibility for get_scope/collection id

Still needs tweaking and cleaning (some cerr stuff)

Tests to check returned uid...

Change-Id: I4a20c791284a12d66741254da006541f923362e7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-04-17 15:42:29.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-17 18:22:10.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3175/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3175/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3191/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3191/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11043/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11043/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3252/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27588/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27588/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1763/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/collections.h:20:2: error: "Please include memcached/engine.h instead" [clang-diagnostic-error]
#error "Please include memcached/engine.h instead"
 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/protocol_binary.h:2211:5: warning: single-argument constructors must be marked explicit to avoid unintentional implicit conversions [google-explicit-constructor]
    GetCollectionIDPayload(uint64_t manifestId)
    ^
    explicit 
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/protocol_binary.h:2238:5: warning: single-argument constructors must be marked explicit to avoid unintentional implicit conversions [google-explicit-constructor]
    GetScopeIDPayload(uint64_t manifestId) : manifestId(htonll(manifestId)) {
    ^
    explicit 

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1763/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/collections.h:20:2:
error: "Please include memcached/engine.h instead" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1763/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23590/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: use of undeclared identifier "producer"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23590/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2235/ : FAILURE

Compile error at [2020-04-17T17:00:40.029Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: use of undeclared identifier "producer"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2235/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/282/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
